lanchonete-productions-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanchonete-deployment-productions
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lanchonete-productions
  template:
    metadata:
      name: lanchonete-productions-pod
      labels: 
        app: lanchonete-productions-pod
    spec:
      containers:
        - name: lanchonete-container
          image: tsrocha901/microservice-fiap-lanchonete-production:latest
          ports:
            - containerPort: 3333
          resources:
            requests:
              cpu: 10m
  selector:
    matchLabels:
      app: lanchonete-productions-pod
