lanchonete-orders-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lanchonete-orders-service
spec:
  selector:
    app: lanchonete-orders-pod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3333
