lanchonete-productions-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lanchonete-productions-service
spec:
  selector:
    app: lanchonete-productions-pod
  
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
